--- a/css/base.css
+++ b/css/base.css
@@ -7,8 +7,8 @@ body {
 	background: #F3F2F1;
 	margin: 0 auto;
 	line-height: 1.5;	
-	color: #111;
-font: 15px/20px 'Open Sans', sans-serif;
+	color: #390000;
+font: 15px/23px 'Open Sans', sans-serif;
 -webkit-font-smoothing: antialiased;
 }
 .btn {
@@ -22,14 +22,17 @@ font: 15px/20px 'Open Sans', sans-serif;
 	transition: all .2s ease-in-out;
 }
 .btn-primary {
-	background: #166596;
+	background: #e0330c;
 }
 .btn-primary:hover {
 	-moz-transition: all .2s ease-in-out;
 	-webkit-transition: all .2s ease-in-out;
 	-o-transition: all .2s ease-in-out;
 	transition: all .2s ease-in-out;
-	background: #50A5DA
+	background: #E4684C;
+}
+a {
+	color: #e0330c;
 }
 a:hover {
 	text-decoration: none;
@@ -46,7 +49,7 @@ h4 {
 	font-weight: bold;
 }
 header {
-	background: #0066A4;
+	background: #D3360B;
 	position: fixed;;
 	top: 0;
 	width: 100%;
@@ -71,18 +74,16 @@ header {
 	width: 27px;
 	border-radius: 50%;
 	text-align: center;
-	opacity: .7;
 	-moz-transition: all .2s ease-in-out;
 	-webkit-transition: all .2s ease-in-out;
 	-o-transition: all .2s ease-in-out;
 	transition: all .2s ease-in-out;
 }
 .social li:hover {
-	opacity: 1;
 	background: #FFF;
 }
 .social li:hover a {
-	color: #0066a4;
+	color: #D3360B;
 }
 .social li a {
 	display: block;
@@ -142,16 +143,14 @@ header {
 	text-shadow: none;
 }
 .prev-meetups {
-	background: #F2F2F2;
+	background: #FFF;
 	padding: 0 0 100px;
-	box-shadow: 0 -2px 10px #ccc inset;
 }
 .headline {
 	text-align: center;
 	padding: 50px 0;
 }
 .headline h3 {
-	color: #727272;
 	font-size: 30px;
 	line-height: 40px;
 	letter-spacing: -1px;
@@ -195,7 +194,6 @@ header {
 	padding: 40px;
 }
 .tab-content p {
-	color: #888888;
 	font-size: 15px;
 	font-style: normal;
 	font-weight: 400;
@@ -204,14 +202,14 @@ header {
 	margin-top: 0;
 }
 footer {
-	background: #00314E;
+	background: #F5F5F5;
 	padding: 50px;
 }
 footer h3 {
 	text-shadow: none;
 	font-weight: bold;
 	font-size: 17px;
-	color: #FFF;
+	color: #555;
 	border: none;
 	text-align: left;
 	padding-bottom: 0px;
@@ -222,5 +220,4 @@ footer p {
 	margin-bottom: 10px;
 	color: #717576;
 	font-size: 13px;
-}
 }
